--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.1",
     "date-fns": "^4.1.0",
     "esbuild": "^0.21.5",
     "framer-motion": "^10.18.0",
@@ -32,6 +33,7 @@
     "pigeon-maps": "^0.22.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
